force-app/main/default/objects/Account/fields/EBIT__c.field-meta.xml
<CustomField>
    <fullName>EBIT__c</fullName>
    <label>EBIT</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Earnings Before Interest and Taxes. Used for Altman Z-Score credit rating calculation (X3 ratio).</description>
</CustomField>