force-app/main/default/objects/Account/fields/MarketValueEquity__c.field-meta.xml
<CustomField>
    <fullName>MarketValueEquity__c</fullName>
    <label>Market Value of Equity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Market value of equity. Used for Altman Z-Score credit rating calculation (X4 ratio).</description>
</CustomField>