force-app/main/default/objects/Account/fields/RetainedEarnings__c.field-meta.xml
<CustomField>
    <fullName>RetainedEarnings__c</fullName>
    <label>Retained Earnings</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Retained earnings of the company. Used for Altman Z-Score credit rating calculation (X2 ratio).</description>
</CustomField>