force-app/main/default/objects/Account/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>Sales</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Net sales / revenue. Used for Altman Z-Score credit rating calculation (X5 ratio).</description>
</CustomField>