force-app/main/default/objects/Account/fields/TotalAssets__c.field-meta.xml
<CustomField>
    <fullName>TotalAssets__c</fullName>
    <label>Total Assets</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total assets of the company. Used as the denominator in multiple Altman Z-Score ratios (X1, X2, X3, X5).</description>
</CustomField>