force-app/main/default/objects/Account/fields/TotalLiabilities__c.field-meta.xml
<CustomField>
    <fullName>TotalLiabilities__c</fullName>
    <label>Total Liabilities</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total liabilities of the company. Used for Altman Z-Score credit rating calculation (X4 ratio).</description>
</CustomField>