force-app/main/default/objects/Account/fields/WorkingCapital__c.field-meta.xml
<CustomField>
    <fullName>WorkingCapital__c</fullName>
    <label>Working Capital</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Current Assets minus Current Liabilities. Used for Altman Z-Score credit rating calculation (X1 ratio).</description>
</CustomField>